--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,17 @@
 spring.application.name=cohort backend
-server.port=${PORT:1091}
+server.port=1091
 
-# Database Configuration - Uses environment variables for production
-spring.datasource.driver-class-name=${DB_DRIVER:org.postgresql.Driver}
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/cohortbackend}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:}
+# MySQL Database Configuration
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/cohortbackend?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Gnanesh@1561
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Logging
 logging.level.org.springframework=INFO
 logging.level.com.example.taskmanager=DEBUG
-
-# CORS configuration
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
