--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=cohort backend
-server.port=1091
+server.port=${PORT:8080}
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/cohortbackend?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Gnanesh@1561
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/cohortbackend?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:Gnanesh@1561}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
