--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=${PORT:8080}
 
 # MySQL Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/cohortbackend?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${DB_USERNAME:root}
-spring.datasource.password=${DB_PASSWORD:Gnanesh@1561}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:cohortbackend}?useSSL=false&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:Gnanesh@1561}
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
